[package]
name = "dota-terrain-mod"
version = "0.1.0"
authors = ["ObsoleteXero"]
edition = "2021"
repository = "https://github.com/ObsoleteXero/Dota-Terrain-Mod"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
crc = "3"
md-5 = "0.10"
winreg = "0.50.0"